refactor(implementation): adjust code descriptions

--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "Zuerst werden alle notwendigen Pakete und Module importiert.\n",
-    "Dabei wird neben den Modulen der Standardbibliothek (`random`, `sys` und `time`) und des `defaultdict` aus dem `collections` Modul noch das Paket *Python-Chess* (`chess`) benötigt, welches bereits installiert wurde.\n",
+    "Dabei wird neben den Modulen der Standardbibliothek (`random`, `sys` und `time`) und den Datenstrukturen `defaultdict` und `OrderedDict` aus dem `collections` Modul noch das Paket *Python-Chess* (`chess`) benötigt, welches bereits installiert wurde.\n",
     "Zudem werden für die Anzeige einige Funktionen aus IPython benötigt, die durch die Installation und Verwendung von Jupyter Notebooks bereitgestellt werden."
    ]
   },
@@ -35,16 +35,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Für die spätere Implementierung der Transpositionstabellen wird ein LRU Cache implementiert repräsentiert durch die Klasse `LRUCache`.\n",
+    "Eine detaillierte Beschreibung der Implementierung ist in Kapitel~\\ref{ch:transpositional-tables} zu finden."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The normal OrderedDict doesn't update the position of a key in the list,\n",
-    "# when the value is changed.\n",
     "class LRUCache:\n",
-    "    \"\"\"Store items in the order the keys were last added\"\"\"\n",
-    "\n",
     "    def __init__(self, size):\n",
     "        self.od = OrderedDict()\n",
     "        self.size = size\n",
@@ -55,10 +59,10 @@
     "        except KeyError:\n",
     "            return default\n",
     "        return self.od[key]\n",
-    "    \n",
+    "\n",
     "    def __contains__(self, item):\n",
     "        return item in self.od\n",
-    "    \n",
+    "\n",
     "    def __len__(self):\n",
     "        return len(self.od)\n",
     "\n",
@@ -85,6 +89,7 @@
    "source": [
     "Als nächstes werden globale Konstanten definiert.\n",
     "\n",
+    "- `QUIESCENCE_SEARCH_DEPTH` ist die maximale Suchtiefe der Ruhesuche.\n",
     "- `TABLE_SIZE` is die maximale größe der Transpositionstabellen.\n",
     "- `TIMEOUT_SECONDS` wird verwendet, um die Zeit des Schachcomputers zur Berechnung seines nächsten Zuges festzulegen."
    ]
@@ -100,8 +105,8 @@
    },
    "outputs": [],
    "source": [
-    "QUESCENCE_SEARCH_DEPTH: int = 6\n",
-    "TABLE_SIZE = 1e8\n",
+    "QUIESCENCE_SEARCH_DEPTH: int = 6\n",
+    "TABLE_SIZE: int = 1e8\n",
     "TIMEOUT_SECONDS: int = 30"
    ]
   },
@@ -122,11 +127,12 @@
     "- `is_timeout` ist genau dann wahr, wenn die Zeit des Schachcomputers abgelaufen ist.\n",
     "- Bei `move_scores` handelt es sich um ein Dictionary, dass den Score für jeden bereits besuchten Zug im Iterative Deepening Verfahren speichert.\n",
     "Dabei handelt es sich speziell um ein verschachteltes Dictionary.\n",
-    "Die Schlüssel auf der obersten Ebene bilden die Stellungen in FEN Notation.\n",
+    "Die Schlüssel auf der obersten Ebene bilden die Stellungen in \\ac{FEN}.\n",
     "Der dazugehörige Wert ist wiederum ein Dictionary mit den Zügen als Schlüssel und dem dazugehörigen Score als Wert.\n",
     "- `neighbor_boards` ist ein Dictionary, dass alle Stellungen enthält, die in einem Halbzug von der aktuellen Stellung aus erreicht werden können und die evaluiert wurden.\n",
     "Es dient dazu, das Dictionary `move_scores` zu beschneiden.\n",
-    "- In der Variablen `start_time` wird die Startzeit des Zuges des Schachcomputers abgelegt."
+    "- In der Variablen `start_time` wird die Startzeit des Zuges des Schachcomputers abgelegt.\n",
+    "- `transposition_table` ist ein LRU Cache mit der maximalen Größe `TABLE_SIZE` und bildet damit die Transpositionstabellen ab."
    ]
   },
   {
@@ -218,8 +224,8 @@
    },
    "source": [
     "Als nächstes werden die figurenspezifischen Positionstabellen implementiert.\n",
-    "Dafür wird ein Dictionary `piece_squared_tables` angelegt, welches für jede Figur die entsprechende Positionstabelle speichert.\n",
-    "Die Tabellen werden dabei als Tupel von Tupel gespeichert, da die Veränderung der Werte während des Spiels nicht zulässig ist.\n",
+    "Dafür wird ein Dictionary `piece_squared_tables` angelegt, das für jede Figur die entsprechende Positionstabelle speichert.\n",
+    "Die Tabellen werden dabei als Tupel von Tupeln gespeichert, da die Veränderung der Werte während des Spiels nicht zulässig ist.\n",
     "Die Tabellen sind aus dem Theorieteil übernommen worden, weshalb sie aus Sicht des weißen Spielers zu betrachten sind.\n",
     "Das Feld A1 befindet sich somit unten links, was dem Index `[7][0]` entspricht."
    ]
@@ -548,6 +554,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Funktion `get_score` ist ein Zwischenschritt zwischen den Aufrufen von `maximize` und `minimize`.\n",
+    "Sie akzeptiert fünf Argumente:\n",
+    "\n",
+    "- `board` repräsentiert die aktuelle Stellung.\n",
+    "- `depth` steht für die aktuelle Tiefe.\n",
+    "- `alpha` ist der entsprechende Wert für Alpha und\n",
+    "- `beta` ist der entsprechende Wert für Beta.\n",
+    "- `minimax` ist eine Funktion, die später repräsentativ für `maximize` und `minimize` aufgerufen wird, je nachdem welche der beiden übergeben wird.\n",
+    "\n",
+    "Ihre Aufgabe ist es zu evaluieren, ob es sich bei der zu betrachtenden Stellung um eine bereits betrachtete Transposition handelt.\n",
+    "Ist dies der Fall, so wird der Wert aus dem Cache verwendet.\n",
+    "Ist dies nicht der Fall, so werden die Intervallsgrenzen gegebenenfalls angepasst und der Wert wird berechnet."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -581,30 +605,32 @@
    },
    "source": [
     "Die Implementierung der Funktion `maximize` orientiert sich stark am Pseudocode aus dem Theorieteil.\n",
-    "Die Funktion erhält fünf Parameter.\n",
+    "Die Funktion erhält vier Parameter.\n",
     "\n",
     "- `board` enthält die aktuelle Stellung.\n",
     "- `depth` repräsentiert die Tiefe, mit der `maximize` aufgerufen wird.\n",
     "- `alpha` repräsentiert die Variable Alpha des Alpha-Beta Prunings.\n",
     "- `beta` repräsentiert die Variable Beta des Alpha-Beta Prunings.\n",
-    "- `color` steht für den Spieler, der gerade am Zug ist.\n",
     "\n",
     "Zu Beginn wird geprüft, ob die Zeit des Schachcomputers bereits abgelaufen ist.\n",
     "Ist dies der Fall, so wird die Variable `is_timeout` auf `True` gesetzt und `alpha` zurückgegeben.\n",
     "Ist die Zeit noch nicht abgelaufen wird des Weiteren überprüft, ob es sich bei der aktuellen Suchtiefe um eine Tiefe kleiner als 1 handelt.\n",
-    "Ist dies der Fall, wird die aktuelle Stellung mittels der Bewertungsheuristik evaluiert und der entsprechende Wert zurückgeliefert.\n",
+    "Ist dies der Fall, wird die aktuelle Stellung mittels der Ruhesuche evaluiert und der entsprechende Wert zurückgeliefert.\n",
+    "Weil noch kein Zug durchgeführt wurde, wird die Ruhesuche für `maximize` aufgerufen (`quiescnece_search_maximize`).\n",
+    "Dabei ist zu beachten, dass die Suchtiefe um eins erhöht wird.\n",
+    "Ist die aktuelle Suchtiefe nicht kleiner als eins, so wird als nächstes der Variablen `score` der Wert für `alpha` zugewiesen.\n",
     "Anschließend werden alle zulässigen Züge nach ihren Scores sortiert, sodass aussichtsreichere Züge zuerst evaluiert werden.\n",
     "Ist kein Score für einen zulässigen Zug vorhanden, so wird diesem der für den Spieler schlechteste Score (`-sys.maxsize`) zugewiesen.\n",
-    "Anschließend wird über alle zulässigen Züge iteriert und die Funktion `minimize` nach der Ausführung des Zuges des aktuellen Schleifendurchlaufs aufgerufen.\n",
+    "Nachfolgend wird über alle zulässigen Züge iteriert und die Funktion `get_score` mit `minimize` als Parameter für `minimax` nach der Ausführung des Zuges des aktuellen Schleifendurchlaufs aufgerufen.\n",
     "Die Variablen `score` und `alpha` werden basierend auf dem Wert von `move_score` aktualisiert, wie dies im Pseudocode aus dem Theorieteil der Fall ist.\n",
-    "Zusätzlich wird `best_move` der aktuelle Zug zugewiesen, wenn folgende drei Bedingungen erfüllt sind:\n",
+    "Zusätzlich wird `best_move` der aktuelle Zug zugewiesen, wenn folgende zwei Bedingungen erfüllt sind:\n",
     "\n",
     "1. Der aktuelle Score ist größer als Alpha, wodurch die Variable `alpha` aktualisiert wird und ein möglicher neuer bester Zug gefunden wurde.\n",
     "1. Die aktuelle Suchtiefe entspricht der Suchtiefe, mit der die Funktion `iterative_deepening` die aktuelle Iteration anstieß.\n",
-    "1. Beim Spieler, der derzeit am Zug ist, handelt es sich um den Weißen bzw. maximierenden Spieler.\n",
     "\n",
     "Während des Schleifendurchlaufs wird der `move_score` für einen Zug im Dictionary `move_scores` abgelegt.\n",
-    "Dabei wird er der Stellung zugewiesen, die als Ausgangsstellung für den Zug dient."
+    "Dabei wird er der Stellung zugewiesen, die als Ausgangsstellung für den Zug dient.\n",
+    "Weiterhin wird die neue Stellung dem Dictionary `neighbor_boards` zugewiesen, sodass später das Dictionary `move_scores` beschnitten werden kann."
    ]
   },
   {
@@ -673,8 +699,7 @@
     "Somit fängt der Schachcomputer mit dem Zug an, der den geringsten Score besitzt.\n",
     "Zudem ist der für den Spieler schlechteste Zug nun `sys.maxsize`.\n",
     "- Es wird die Variable `beta` aktualisiert und nicht die Variable `alpha`.\n",
-    "Diese wird zudem aktualisiert, wenn der aktuelle `score` niedriger und somit besser ist.\n",
-    "- Eine der Bedingungen für die Aktualisierung des `best_move` ändert sich: So wird nun die Variable nur gesetzt, wenn der Schwarze bzw. minimierende Spieler am Zug ist."
+    "Diese wird zudem aktualisiert, wenn der aktuelle `score` niedriger und somit besser ist."
    ]
   },
   {
@@ -729,6 +754,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Funktion `quiescence_search_maximize` implementiert die Ruhesuche aus sicht des maximierenden Spielers.\n",
+    "Sie ist daher weitesgehend identisch mit der Funktion `maximize` und verfügt auch über die selbe Parameterliste.\n",
+    "Ist die maximale Tiefe für die Ruhesuche (`QUIESCENCE_SEARCH_DEPTH`) erreicht, so wird die aktuelle Stellung mittels der Bewertungsheuristik evaluiert und das Ergebnis zurückgeliefert.\n",
+    "Andernfalls wird eine Liste der aggressiven Züge mittels der Funktion `generate_aggressive_moves` generiert.\n",
+    "Im Falle einer leeren Liste, wird stattdessen die aktuelle Stellung evaluiert und das Ergebnis zurückgeliefert.\n",
+    "Im Unterschied zur `maximize` Funktion werden hier keine Scores für die Züge global abgespeichert und auch keine Transpositionen bestimmt.\n",
+    "Aus diesem Grunde ruft die Funktion auch eine separate Funktion `quiescence_search_minimize` auf und nicht die Funktion `minimize`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -738,7 +776,7 @@
     "    global best_move\n",
     "    global global_best_move\n",
     "    \n",
-    "    if depth == QUESCENCE_SEARCH_DEPTH:\n",
+    "    if depth == QUIESCENCE_SEARCH_DEPTH:\n",
     "        return simple_eval_heuristic(board)\n",
     "    \n",
     "    moves = generate_aggressive_moves(board)\n",
@@ -762,6 +800,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analog dazu ist die Funktion `quiescence_search_minimize` die zugehörige Ruhesuchenfunktion zur Funktion `minimize`.\n",
+    "Auch sie verfügt über eine identische Parameterliste."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -771,7 +817,7 @@
     "    global best_move\n",
     "    global global_best_move\n",
     "    \n",
-    "    if depth == QUESCENCE_SEARCH_DEPTH:\n",
+    "    if depth == QUIESCENCE_SEARCH_DEPTH:\n",
     "        return simple_eval_heuristic(board)\n",
     "    \n",
     "    moves = generate_aggressive_moves(board)\n",
@@ -792,6 +838,17 @@
     "            if beta <= alpha:\n",
     "                return beta\n",
     "    return score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`generate_aggressive_moves` generiert alle aggressiven Züge für eine gegebene Stellung.\n",
+    "Dabei werden zuerst alle zulässigen Züge abgefragt.\n",
+    "Anschließend wird über die Liste der zulässigen Züge iteriert und überprüft, ob es sich um einen aggresiven Zug handelt.\n",
+    "Dies ist genau dann der Fall, wenn durch das Durchführen des Zuges eine Figur des Gegners geschlagen werden kann.\n",
+    "Am Ende wird die Liste der zulässigen aggressiven Züge zurückgeliefert."
    ]
   },
   {
@@ -817,7 +874,7 @@
     }
    },
    "source": [
-    "Die Funktion `get_opening_data_base_moves` ist eine Hilfsfunktion, die einen Zug aus der Opening Data Base zurückgibt, falls ein Zug für die übergebene Stellung gefunden wird."
+    "Die Funktion `get_opening_data_base_moves` ist eine Hilfsfunktion, die einen Zug aus der Opening Data Base für die aktuelle Stellung (`board`) zurückgibt, falls ein Zug für die übergebene Stellung gefunden wird."
    ]
   },
   {
@@ -855,14 +912,16 @@
    "source": [
     "Nachdem alle notwendigen Funktionen für den Schachcomputer implementiert sind, kann nun die Funktion `ai_player` implementiert werden.\n",
     "Sie repräsentiert den Schachcomputer dem Spiel gegenüber.\n",
-    "Die Funktion erhält zwei Parameter:\n",
+    "Die Funktion besitzt zwei Parameter:\n",
     "\n",
     "- `board` enthält die aktuelle Stellung.\n",
     "- `color` repräsentiert den Spieler, der am Zug ist.\n",
     "\n",
     "Zuerst wird in der verfügbaren Opening Data Base geschaut, ob ein Zug für die übergebene Stellung vorhanden ist.\n",
     "Ist dies der Fall, so wird der Zug zurückgegeben.\n",
-    "Andernfalls wird das globale `move_scores` Dictionary zurückgesetzt und die Funktion `iterative_deepening` aufgerufen und deren gewählter Zug zurückgegeben."
+    "Andernfalls wird das globale `move_scores` Dictionary zurückgesetzt und die Funktion `iterative_deepening` aufgerufen und deren gewählter Zug zurückgegeben.\n",
+    "Es ist zu beachten, dass wenn ein Zug aus der Opening Data Base verwendet wird, die globalen Dictionaries für die Zugscores und die Nachbarstellungen zurückgesetzt werden, da ansonsten keine ausreichende Kontrolle über die Tiefen existiert.\n",
+    "Diese Gegebenheit kann durch eine komplexere Implementierung der Zugsortieren optimiert werden, wird an dieser Stellung aber nicht weiter betrachtet."
    ]
   },
   {
