feat: write abstracts

--- a/paper/content/abstract.tex
+++ b/paper/content/abstract.tex
@@ -1,8 +1,20 @@
 % !TeX root = ../paper.tex
 \section*{Abstract in deutscher Sprache}
 
+Die vorliegende Arbeit stellt die Implementierung eines Schachcomputers dar.
+Hierfür werden zuerst die theoretischen Grundlagen, die für die Erstellung des Schachcomputers notwendig sind, erläutert.
+Dies umfasst den Mini-Max-Algorithmus, die Bewertungsfunktion und die in der Arbeit verwendete Bewertungsheuristik sowie die Alpha-Beta-Suche.
+Des Weiteren werden als Verbesserungen der Alpha-Beta-Suche die Zugvorsortierung, die Ruhesuche und Transpositionstabellen erklärt.
+Es folgt die Implementierung des Schachcomputer mittels der Programmiersprache Python.
+Den Abschluss der Arbeit bildet ein Auswertungs- und Diskussionsteil.
+
 \acresetall{}
 
 \newpage \section*{Abstract in englischer Sprache}
+
+The paper at hand shows the implementation of a chess computer.
+Therefore, theoretical basics such as the Mini-Max-Algorithm, the used evaluation heuristic as well as Alpha-Beta-Pruning are explained.
+Furthermore, enhancements of Alpha-Beta-Pruning namely move ordering, quiescence search, and transpositional tables are described.
+Subsequently, the actual implementation of the chess computer is shown followed by an evaluation and discussion section.
 
 \acresetall{}
