refactor(implementation): change order of cells

--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -347,32 +347,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Die Funktion `check_endgame` überprüft ob sich eine Stellung im Endspiel befindet. Dafür bekommt die Funktion eine Stellung (`board`) als Parameter. Anschließend wird über die Felder des Bretts iteriert und alle Figuren bis auf Bauern und Könige gezählt. Sobald der Zähler für die Figuren (`counter`) größer als 4 ist, ist sicher, dass sich das Spiel nicht im Endspiel befindet und es wird `False` zurückgegeben. Sollte der Zähler nach durchlaufen der Schleife immer noch kleiner als 4 sein, so befindet sich das Spiel im Endspiel und es wird `True` zurückgegeben."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def check_endgame(board: chess.Board):\n",
-    "    counter = 0\n",
-    "    for square in range(64):\n",
-    "        piece = board.piece_at(square)\n",
-    "        if not piece:\n",
-    "            continue\n",
-    "        if piece.piece_type is not chess.PAWN and piece.piece_type is not chess.KING:\n",
-    "            counter += 1\n",
-    "            if counter > 4:\n",
-    "                return False\n",
-    "    return True"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Die Funktion `get_piece_quared_tables_value` liefert den Wert der figurenspezifischen Positionstabellen für eine übergebene Figur `piece` auf dem Schachbrett.\n",
     "Der Zeilen- und Spaltenindex in der Tabelle wird basierend auf dem Zahlenwert des Feldes, auf dem die Figur sich befindet (`square`), berechnet.\n",
     "Dabei entspricht der Zeilenindex dem Ergebnis der Ganzzahldivision durch 8 und der Spaltenindex dem Rest aus der Division mit der Zahl 8.\n",
@@ -662,132 +636,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Die Funktion `quiescence_search_maximize` implementiert die Ruhesuche aus der Sicht des maximierenden Spielers. Sie ist daher weitesgehend identisch mit der Funktion maximize und verfügt auch über die selbe Parameterliste. Ist die maximale Tiefe für die Ruhesuche (`QUIESCENCE_SEARCH_DEPTH`) erreicht, so wird die aktuelle Stellung mittels der Bewertungsheuristik evaluiert und das Ergebnis zurückgeliefert.\n",
-    "Bei den Zügen werden nur die, die als favorisierend betrachtet werden (`favorable_moves`), berücksichtigt."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def quiescence_search_maximize(board: chess.Board, alpha, beta, currentDepth: int):\n",
-    "    global best_move\n",
-    "    global global_best_move\n",
-    "    global endgame\n",
-    "\n",
-    "    if currentDepth == QUIESCENCE_SEARCH_DEPTH:\n",
-    "        return simple_eval_heuristic(board, endgame)\n",
-    "\n",
-    "    favorable_moves = []\n",
-    "    moves = board.legal_moves\n",
-    "\n",
-    "    for move in moves:\n",
-    "        if is_favorable_move(board, move):\n",
-    "            favorable_moves.append(move)\n",
-    "\n",
-    "    if favorable_moves == []:\n",
-    "        return simple_eval_heuristic(board)\n",
-    "\n",
-    "    score = alpha\n",
-    "    for move in favorable_moves:\n",
-    "        board.push(move)\n",
-    "        move_score = quiescence_search_minimize(board, score, beta, currentDepth + 1)\n",
-    "        board.pop()\n",
-    "        if move_score > score:\n",
-    "            score = move_score\n",
-    "            if score >= beta:\n",
-    "                break\n",
-    "\n",
-    "    return score"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Analog wird die Funktion für die minimierende Ruhesuche `quiescence_search_min` implementiert."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def quiescence_search_minimize(board: chess.Board, alpha, beta, currentDepth: int):\n",
-    "    global best_move\n",
-    "    global global_best_move\n",
-    "    global endgame\n",
-    "\n",
-    "    if currentDepth == QUIESCENCE_SEARCH_DEPTH:\n",
-    "        return simple_eval_heuristic(board, endgame)\n",
-    "\n",
-    "    moves = board.legal_moves\n",
-    "    favorable_moves = []\n",
-    "\n",
-    "    for move in moves:\n",
-    "        if is_favorable_move(board, move):\n",
-    "            favorable_moves.append(move)\n",
-    "\n",
-    "    if favorable_moves == []:\n",
-    "        return simple_eval_heuristic(board)\n",
-    "\n",
-    "    score = beta\n",
-    "    for move in favorable_moves:\n",
-    "        board.push(move)\n",
-    "        move_score = quiescence_search_maximize(board, alpha, score, currentDepth + 1)\n",
-    "        board.pop()\n",
-    "        if move_score < score:\n",
-    "            score = move_score\n",
-    "            if score <= alpha:\n",
-    "                break\n",
-    "\n",
-    "    return score"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Die Funktion `is_favorable_move` überprüft, ob ein Zug zu einer, wie im Kapitel Ruhesuche beschrieben, vorteilhaften Stellung führt oder nicht. \n",
-    "Als Argumente bekommt die Funktion eine Stellung (`board`) und einen Zug (`move`) übergeben.\n",
-    "Nun wird überprüft, ob der Zug vorteilhaft ist.\n",
-    "Der Zug ist dann vorteilhaft, wenn der Zug ein Schlagzug ist und wenn die schlagende Figur weniger Wert ist als die Figur, welche geschlagen wird oder wenn das Feld von der schlagenden Seite feldbeherrschungstechnisch majorisiert wird.\n",
-    "En-Passant Züge werden zuvor schon herausgefiltert, weil in diesem Fall ein Bauer geschlagen wird, welcher sich aktuell auf einem anderen Feld befindet, als das Zielfeld des Schlagzugs. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def is_favorable_move(board: chess.Board, move: chess.Move) -> bool:\n",
-    "    if move.promotion is not None:\n",
-    "        return True\n",
-    "    if board.is_capture(move) and not board.is_en_passant(move):\n",
-    "        if piece_values.get(board.piece_type_at(move.from_square)) < piece_values.get(\n",
-    "            board.piece_type_at(move.to_square)\n",
-    "        ) or len(board.attackers(board.turn, move.to_square)) > len(\n",
-    "            board.attackers(not board.turn, move.to_square)\n",
-    "        ):\n",
-    "            return True\n",
-    "    return False"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
     }
    },
    "source": [
-    "Nachdem die verwendete Bewertungsheuristik implementiert ist, kann nun das Alpha-Beta Pruning zusammen mit dem Iterative Deepening umgesetzt werden.\n",
+    "Nachdem die verwendete Bewertungsheuristik und das Zobrist Hashing implementiert sind, kann nun das Alpha-Beta Pruning zusammen mit dem Iterative Deepening umgesetzt werden.\n",
     "Hierfür wird eine Funktion `iterative_deepening` implementiert, die den Ablauf dieses Prozesses koordiniert.\n",
     "Sie erhält folgende drei Parameter:\n",
     "\n",
@@ -854,6 +709,32 @@
     "        d += 1\n",
     "        if is_timeout:\n",
     "            return global_best_move"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Funktion `check_endgame` überprüft ob sich eine Stellung im Endspiel befindet. Dafür bekommt die Funktion eine Stellung (`board`) als Parameter. Anschließend wird über die Felder des Bretts iteriert und alle Figuren bis auf Bauern und Könige gezählt. Sobald der Zähler für die Figuren (`counter`) größer als 4 ist, ist sicher, dass sich das Spiel nicht im Endspiel befindet und es wird `False` zurückgegeben. Sollte der Zähler nach durchlaufen der Schleife immer noch kleiner als 4 sein, so befindet sich das Spiel im Endspiel und es wird `True` zurückgegeben."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_endgame(board: chess.Board):\n",
+    "    counter = 0\n",
+    "    for square in range(64):\n",
+    "        piece = board.piece_at(square)\n",
+    "        if not piece:\n",
+    "            continue\n",
+    "        if piece.piece_type is not chess.PAWN and piece.piece_type is not chess.KING:\n",
+    "            counter += 1\n",
+    "            if counter > 4:\n",
+    "                return False\n",
+    "    return True"
    ]
   },
   {
@@ -1041,6 +922,125 @@
     "\n",
     "    transposition_table[(zobrist, depth)] = score, alpha, beta\n",
     "    return score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Funktion `quiescence_search_maximize` implementiert die Ruhesuche aus der Sicht des maximierenden Spielers. Sie ist daher weitesgehend identisch mit der Funktion maximize und verfügt auch über die selbe Parameterliste. Ist die maximale Tiefe für die Ruhesuche (`QUIESCENCE_SEARCH_DEPTH`) erreicht, so wird die aktuelle Stellung mittels der Bewertungsheuristik evaluiert und das Ergebnis zurückgeliefert.\n",
+    "Bei den Zügen werden nur die, die als favorisierend betrachtet werden (`favorable_moves`), berücksichtigt."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def quiescence_search_maximize(board: chess.Board, alpha, beta, currentDepth: int):\n",
+    "    global best_move\n",
+    "    global global_best_move\n",
+    "    global endgame\n",
+    "\n",
+    "    if currentDepth == QUIESCENCE_SEARCH_DEPTH:\n",
+    "        return simple_eval_heuristic(board, endgame)\n",
+    "\n",
+    "    favorable_moves = []\n",
+    "    moves = board.legal_moves\n",
+    "\n",
+    "    for move in moves:\n",
+    "        if is_favorable_move(board, move):\n",
+    "            favorable_moves.append(move)\n",
+    "\n",
+    "    if favorable_moves == []:\n",
+    "        return simple_eval_heuristic(board)\n",
+    "\n",
+    "    score = alpha\n",
+    "    for move in favorable_moves:\n",
+    "        board.push(move)\n",
+    "        move_score = quiescence_search_minimize(board, score, beta, currentDepth + 1)\n",
+    "        board.pop()\n",
+    "        if move_score > score:\n",
+    "            score = move_score\n",
+    "            if score >= beta:\n",
+    "                break\n",
+    "\n",
+    "    return score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analog wird die Funktion für die minimierende Ruhesuche `quiescence_search_min` implementiert."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def quiescence_search_minimize(board: chess.Board, alpha, beta, currentDepth: int):\n",
+    "    global best_move\n",
+    "    global global_best_move\n",
+    "    global endgame\n",
+    "\n",
+    "    if currentDepth == QUIESCENCE_SEARCH_DEPTH:\n",
+    "        return simple_eval_heuristic(board, endgame)\n",
+    "\n",
+    "    moves = board.legal_moves\n",
+    "    favorable_moves = []\n",
+    "\n",
+    "    for move in moves:\n",
+    "        if is_favorable_move(board, move):\n",
+    "            favorable_moves.append(move)\n",
+    "\n",
+    "    if favorable_moves == []:\n",
+    "        return simple_eval_heuristic(board)\n",
+    "\n",
+    "    score = beta\n",
+    "    for move in favorable_moves:\n",
+    "        board.push(move)\n",
+    "        move_score = quiescence_search_maximize(board, alpha, score, currentDepth + 1)\n",
+    "        board.pop()\n",
+    "        if move_score < score:\n",
+    "            score = move_score\n",
+    "            if score <= alpha:\n",
+    "                break\n",
+    "\n",
+    "    return score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Funktion `is_favorable_move` überprüft, ob ein Zug zu einer, wie im Kapitel Ruhesuche beschrieben, vorteilhaften Stellung führt oder nicht. \n",
+    "Als Argumente bekommt die Funktion eine Stellung (`board`) und einen Zug (`move`) übergeben.\n",
+    "Nun wird überprüft, ob der Zug vorteilhaft ist.\n",
+    "Der Zug ist dann vorteilhaft, wenn der Zug ein Schlagzug ist und wenn die schlagende Figur weniger Wert ist als die Figur, welche geschlagen wird oder wenn das Feld von der schlagenden Seite feldbeherrschungstechnisch majorisiert wird.\n",
+    "En-Passant Züge werden zuvor schon herausgefiltert, weil in diesem Fall ein Bauer geschlagen wird, welcher sich aktuell auf einem anderen Feld befindet, als das Zielfeld des Schlagzugs. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_favorable_move(board: chess.Board, move: chess.Move) -> bool:\n",
+    "    if move.promotion is not None:\n",
+    "        return True\n",
+    "    if board.is_capture(move) and not board.is_en_passant(move):\n",
+    "        if piece_values.get(board.piece_type_at(move.from_square)) < piece_values.get(\n",
+    "            board.piece_type_at(move.to_square)\n",
+    "        ) or len(board.attackers(board.turn, move.to_square)) > len(\n",
+    "            board.attackers(not board.turn, move.to_square)\n",
+    "        ):\n",
+    "            return True\n",
+    "    return False"
    ]
   },
   {
